plugins {
    id 'com.android.application'
}

android {
    namespace = "com.tradingsim.client"
    compileSdkVersion 36

    defaultConfig {
        applicationId "com.tradingsim.client"
        minSdk 33
        targetSdkVersion 36
        versionCode 1
        versionName "1.0"
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
}

dependencies {
    implementation project(":common")
    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.9.2'
    implementation 'androidx.lifecycle:lifecycle-livedata:2.9.2'
    implementation 'androidx.core:core-ktx:1.18.0'
    implementation 'androidx.appcompat:appcompat:1.7.1'
    implementation 'com.google.android.material:material:1.13.0'
    implementation 'androidx.recyclerview:recyclerview:1.4.0'
    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
    implementation 'com.google.code.gson:gson:2.14.0'
    implementation("com.squareup.okhttp3:okhttp:5.3.2")
    implementation("com.jakewharton.timber:timber:5.0.1")
}